--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-7 about-2-secs-left pr-lg-5">
                     <h3 class="title-style mb-sm-3 mb-2">
                         영양소 검출 실험 결과가 잘 안나오나요?</h3>
-                    <p>NutriCheck AI를 시작하세요!</p><br><button type="button" class="button" onclick="init()">시작하기</button> <!--버튼-->
+                    <p>NutriCheck AI를 시작하세요!</p><br><button type="button" class="button" onclick="init()">시작하기</button> <!--버튼--><br>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
