--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-7 about-2-secs-left pr-lg-5">
                     <h3 class="title-style mb-sm-3 mb-2">
                         영양소 검출 실험 결과가 잘 안나오나요?</h3>
-                    <p>NutriCheck AI를 시작하세요!</p><br><button type="button" class="button" onclick="init()">시작하기</button> <!--버튼--><br>
-                    아래 보이는 화면에서 AI 실험이 가능합니다!
+                    <p>NutriCheck AI를 시작하세요!</p><br><button type="button" class="button" onclick="init()">시작하기</button> <!--버튼--><br><br>
+                    웹캠(또는 카메라)을 완료된 영양소 검출 샘플에 비춰주세요!<br>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
