--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Author URL: http://w3layouts.com
             <nav class="navbar navbar-expand-lg stroke">
                 <h1>
                     <a class="navbar-brand d-flex align-items-center" href="index.html">
-                        <img src="assets/images/logo.png" alt="" class="mr-1" />NutriCheck AI</a>
+                        <img src="https://github.com/ai-sketch/ai-sketch.github.io/blob/main/assets/images/logo.png" alt="" class="mr-1" />NutriCheck AI</a>
                 </h1>
                 <!-- if logo is image enable this   
     <a class="navbar-brand" href="#index.html">
