--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Author URL: http://w3layouts.com
         <div class="container pb-md-5 pb-4 mb-5">
             <div class="row align-items-center justify-content-between">
                 <div class="col-lg-5 about-2-secs-right mb-lg-0 mb-4 text-center">
-                    <img src="assets/images/image.png" alt="" class="img-fluid img-responsive m-auto" />
+                    <img src="assets/images/logo.png" alt="" class="img-fluid img-responsive m-auto" />
                 </div>
                 <div class="col-lg-7 about-2-secs-left pr-lg-5">
                     <h3 class="title-style mb-sm-3 mb-2">
