--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ Author URL: http://w3layouts.com
             <nav class="navbar navbar-expand-lg stroke">
                 <h1>
                     <a class="navbar-brand d-flex align-items-center" href="index.html">
-                        <img src="assets/images/logo.png" alt="" class="mr-1" style="width:500px;height:600px;"/>&nbsp;&nbsp;NutriCheck AI</a>
+                        <img src="assets/images/logo.png" alt="" class="mr-1" style="width:100px;height:100px;"/>&nbsp;&nbsp;NutriCheck AI</a>
                 </h1>   
     <a class="navbar-brand" href="#index.html">
-        <img src="assets/images/logo.png" alt="NutriCheck AI" title="NutriCheck AI" style="height:35px;" style="width:500px;height:600px;"/>
+        <img src="assets/images/logo.png" alt="NutriCheck AI" title="NutriCheck AI" style="width:35px;height:35px;"/>
     </a> -->
                 <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
                     data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
