--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ Author URL: http://w3layouts.com
                     <a class="navbar-brand d-flex align-items-center" href="index.html">
                         <img src="assets/images/logo.png" alt="" class="mr-1" style="width:100px;height:100px;"/>&nbsp;&nbsp;NutriCheck AI</a>
                 </h1>   
-    <a class="navbar-brand" href="#index.html">
+    <!--<a class="navbar-brand" href="#index.html">
         <img src="assets/images/logo.png" alt="NutriCheck AI" title="NutriCheck AI" style="width:35px;height:35px;"/>
-    </a>
+    </a>-->
                 <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
                     data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
