--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Author URL: http://w3layouts.com
     <!-- //google-fonts -->
     <!-- Template CSS Style link -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/flaticon.css">
     <style>
         .button {
             background-color: white;
@@ -37,7 +38,7 @@ Author URL: http://w3layouts.com
         <div class="container-fluid">
             <div class="top-content-w3ls d-flex align-items-center justify-content-between">
                 <div class="top-headers">
-                    <p style="color:rgb(182, 182, 230);">NutriCheck AI가 오픈했습니다!</p>
+                    <span class="flaticon-check-mark"></span><p style="color:#b6b6e6;">NutriCheck AI가 오픈했습니다!</p>
                 </div>
                 <div class="top-headers top-headers-2">
                 </div>
@@ -227,6 +228,7 @@ Author URL: http://w3layouts.com
                     <p>@2021 NutriCheck. All rights reserved. Design by <a href="https://w3layouts.com/"
                             target="_blank"></a>
                         W3Layouts</a>
+                        <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
                     </p>
                 </div>
             </div>
