--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Author URL: http://w3layouts.com
         <div class="container-fluid">
             <div class="top-content-w3ls d-flex align-items-center justify-content-between">
                 <div class="top-headers">
-                    <img src="https://www.flaticon.com/svg/vstatic/svg/1443/1443000.svg" style="width:40px; height:40px;"/><p style="color:#b6b6e6;">NutriCheck AI가 오픈했습니다!</p>
+                    <img src="assets/images/check-mark.png" style="width:40px; height:40px;"/><p style="color:#b6b6e6;">NutriCheck AI가 오픈했습니다!</p>
                 </div>
                 <div class="top-headers top-headers-2">
                 </div>
