--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@ Author URL: http://w3layouts.com
             font-size: 16px;
                 }
     </style>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script>
+      window.OneSignal = window.OneSignal || [];
+      OneSignal.push(function() {
+        OneSignal.init({
+          appId: "bae5ecc7-19d8-4d4d-ae5a-e55bd9e2837d",
+        });
+      });
+    </script>
 </head>
 
 <body>
