--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ Author URL: http://w3layouts.com
         </div>
     </section>
     <!-- //about-2 section -->
-
+    <div class='onesignal-customlink-container'></div>
     <!-- footer -->
     <footer class="w3l-footer-22 position-relative mt-5 pt-5">
         <div class="footer-sub">
