--- a/p5.html
+++ b/p5.html
@@ -1,359 +1,16 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
-<!doctype html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>NutriCheck AI</title>
-    <!-- google-fonts -->
-    <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <!-- //google-fonts -->
-    <!-- Template CSS Style link -->
-    <link rel="stylesheet" href="assets/css/style-starter.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/flaticon.css">
-    <style>
-        .button {
-            background-color: white;
-            color: black;
-            border: 2px solid #4CAF50; /* Green */
-            border-radius: 12px;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-                }
-    </style>
-    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-    <script>
-      window.OneSignal = window.OneSignal || [];
-      OneSignal.push(function() {
-        OneSignal.init({
-          appId: "bae5ecc7-19d8-4d4d-ae5a-e55bd9e2837d",
-        });
-      });
-    </script>
+<html><head>
+  <meta charset="UTF-8">
+  <title>NutriCheck AI</title>
+  <script src="p5.min.js"></script>
+  <script src="p5.dom.min.js"></script>
+  <script src="ml5.min.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <!-- top header -->
-    <section class="w3l-top-header">
-        <div class="container-fluid">
-            <div class="top-content-w3ls d-flex align-items-center justify-content-between">
-                <div class="top-headers">
-                    <img src="assets/images/check-mark.png" style="width:20px; height:20px;"/><p style="color:#b6b6e6;"><strong>Notice: </strong>NutriCheck AI가 오픈했습니다!</p>
-                </div>
-                <div class="top-headers top-headers-2">
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- //top header -->
-    <!--header-->
-    <header id="site-header" class="fixed-top">
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg stroke">
-                <h1>
-                    <a class="navbar-brand d-flex align-items-center" href="index.html">
-                        <img src="assets/images/logo.png" alt="" class="mr-1" style="width:30px; height:30px;"/>&nbsp;&nbsp;NutriCheck AI</a>
-                </h1>   
-    <!--<a class="navbar-brand" href="#index.html">
-        <img src="assets/images/logo.png" alt="NutriCheck AI" title="NutriCheck AI" style="width:35px;height:35px;"/>
-    </a>-->
-                <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
-                    data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
-                    <span class="navbar-toggler-icon fa icon-close fa-times"></span>
-                </button>
+  <h1>NutriCheck AI</h1>
+  <p>p5.js를 활용한 인공지능 영양소 검출입니다. javascript를 이용한 AI 검출을 하려면 <a href="https://ai-sketch.github.io/index.html">이 링크</a>를 클릭해주세요.</p>
+  
+  <script src="sketch.js"></script>
 
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav ml-lg-auto">
-                        <!-- search button -->
-                        <div class="search-right ml-lg-3">
-                            <form action="#search" method="GET" class="search-box position-relative">
-                                <div class="input-search">
-                                    <input type="search" placeholder="Enter Keyword" name="search" required="required"
-                                        autofocus="" class="search-popup">
-                                </div>
-                                <button type="submit" class="btn search-btn"><i class="fa fa-search"
-                                        aria-hidden="true"></i></button>
-                            </form>
-                        </div>
-                        <!-- //search button -->
-                    </ul>
-                </div>
-                <!-- toggle switch for light and dark theme -->
-                <div class="cont-ser-position">
-                    <nav class="navigation">
-                        <div class="theme-switch-wrapper">
-                            <label class="theme-switch" for="checkbox">
-                                <input type="checkbox" id="checkbox">
-                                <div class="mode-container">
-                                    <i class="gg-sun"></i>
-                                    <i class="gg-moon"></i>
-                                </div>
-                            </label>
-                        </div>
-                    </nav>
-                </div>
-                <!-- //toggle switch for light and dark theme -->
-            </nav>
-        </div>
-    </header>
-    <!--//header-->
 
-    <!-- about-2 section -->
-    <section class="w3l-about-2 pb-5">
-        <div class="container pb-md-5 pb-4 mb-5">
-            <div class="row align-items-center justify-content-between">
-                <div class="col-lg-5 about-2-secs-right mb-lg-0 mb-4 text-center">
-                    <img src="assets/images/logo.png" alt="" class="img-fluid img-responsive m-auto" />
-                </div>
-                <div class="col-lg-7 about-2-secs-left pr-lg-5">
-                    <h3 class="title-style mb-sm-3 mb-2">
-                        영양소 검출 실험 결과가 잘 안나오나요?</h3>
-                    웹캠(또는 카메라)을 완료된 영양소 검출 샘플에 비춰주세요!<br>
-                    <script src="sketch.js"></script>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- //about-2 section -->
-    <div class='onesignal-customlink-container'></div>
-    <!-- footer -->
-    <footer class="w3l-footer-22 position-relative mt-5 pt-5">
-        <div class="footer-sub">
-            <div class="container">
-                <div class="text-txt">
-                    <div class="right-side">
-                        NutriCheck AI:<br> 인공지능을 이용한 영양소 검출
-                    </div>
-                    <div class="row sub-columns">
-                        <div class="col-lg-2 col-sm-6 sub-two-right">
-                            <h6>Quick links</h6>
-                            <ul>
-                                <li><a href="index.html"><span class="fa fa-angle-double-right mr-2"></span>Home</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-3 col-sm-6 sub-two-right pl-lg-5 mt-sm-0 mt-4">
-                            <h6>LINK</h6>
-                            <ul>
-                                <li><a href="https://nch.page.link/play"><span class="fa fa-angle-double-right mr-2"></span>Google Play</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-3 col-sm-6 sub-one-left mt-lg-0 mt-sm-5 mt-4">
-                            <h6>Contact </h6>
-                            <div class="column2">
-                                <div class="href1"><span class="fa fa-envelope-o" aria-hidden="true"></span><a
-                                        href="mailto:admin@scian.cf">admin@scian.cf</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 sub-one-left ab-right-cont pl-lg-5 mt-lg-0 mt-sm-5 mt-4">
-                            <h6>About </h6>
-                            <p>쉽고 빠른 영양소 검출! NutriCheck!</p>
-                            <div class="columns-2">
-                                <ul class="social">
-                                    <li><a href="https://github.com/hoony6134"><span class="fa fa-github" aria-hidden="true"></span></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- copyright -->
-        <div class="copyright-footer text-center">
-            <div class="container">
-                <div class="columns">
-                    <p>@2021 NutriCheck. All rights reserved. Design by <a href="https://w3layouts.com/"
-                            target="_blank"></a>
-                        W3Layouts</a>
-                        <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <!-- //copyright -->
-    </footer>
-    <!-- //footer -->
-
-    <!-- Js scripts -->
-    <!-- move top -->
-    <button onclick="topFunction()" id="movetop" title="Go to top">
-        <span class="fa fa-level-up" aria-hidden="true"></span>
-    </button>
-    <script>
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function () {
-            scrollFunction()
-        };
-
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("movetop").style.display = "block";
-            } else {
-                document.getElementById("movetop").style.display = "none";
-            }
-        }
-
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-    </script>
-    <!-- //move top -->
-
-    <!-- common jquery plugin -->
-    <script src="assets/js/jquery-3.3.1.min.js"></script>
-    <!-- //common jquery plugin -->
-
-    <!-- banner slider -->
-    <script src="assets/js/owl.carousel.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('.owl-one').owlCarousel({
-                loop: true,
-                margin: 0,
-                nav: false,
-                responsiveClass: true,
-                autoplay: true,
-                autoplayTimeout: 5000,
-                autoplaySpeed: 1000,
-                autoplayHoverPause: false,
-                responsive: {
-                    0: {
-                        items: 1,
-                        nav: false
-                    },
-                    480: {
-                        items: 1,
-                        nav: false
-                    },
-                    667: {
-                        items: 1,
-                        nav: false
-                    },
-                    1000: {
-                        items: 1,
-                        nav: false
-                    }
-                }
-            })
-        })
-    </script>
-    <!-- //banner slider -->
-    <!-- counter for stats -->
-    <script src="assets/js/counter.js"></script>
-    <!-- //counter for stats -->
-
-    <!-- theme switch js (light and dark)-->
-    <script src="assets/js/theme-change.js"></script>
-    <script>
-        function autoType(elementClass, typingSpeed) {
-            var thhis = $(elementClass);
-            thhis.css({
-                "position": "relative",
-                "display": "inline-block"
-            });
-            thhis.prepend('<div class="cursor" style="right: initial; left:0;"></div>');
-            thhis = thhis.find(".text-js");
-            var text = thhis.text().trim().split('');
-            var amntOfChars = text.length;
-            var newString = "";
-            thhis.text("|");
-            setTimeout(function () {
-                thhis.css("opacity", 1);
-                thhis.prev().removeAttr("style");
-                thhis.text("");
-                for (var i = 0; i < amntOfChars; i++) {
-                    (function (i, char) {
-                        setTimeout(function () {
-                            newString += char;
-                            thhis.text(newString);
-                        }, i * typingSpeed);
-                    })(i + 1, text[i]);
-                }
-            }, 1500);
-        }
-
-        $(document).ready(function () {
-            // Now to start autoTyping just call the autoType function with the 
-            // class of outer div
-            // The second paramter is the speed between each letter is typed.   
-            autoType(".type-js", 200);
-        });
-    </script>
-    <!-- //theme switch js (light and dark)-->
-
-    <!-- MENU-JS -->
-    <script>
-        $(window).on("scroll", function () {
-            var scroll = $(window).scrollTop();
-
-            if (scroll >= 80) {
-                $("#site-header").addClass("nav-fixed");
-            } else {
-                $("#site-header").removeClass("nav-fixed");
-            }
-        });
-
-        //Main navigation Active Class Add Remove
-        $(".navbar-toggler").on("click", function () {
-            $("header").toggleClass("active");
-        });
-        $(document).on("ready", function () {
-            if ($(window).width() > 991) {
-                $("header").removeClass("active");
-            }
-            $(window).on("resize", function () {
-                if ($(window).width() > 991) {
-                    $("header").removeClass("active");
-                }
-            });
-        });
-    </script>
-    <!-- //MENU-JS -->
-
-    <!-- disable body scroll which navbar is in active -->
-    <script>
-        $(function () {
-            $('.navbar-toggler').click(function () {
-                $('body').toggleClass('noscroll');
-            })
-        });
-    </script>
-    <!-- //disable body scroll which navbar is in active -->
-
-    <!--bootstrap-->
-    <script src="assets/js/bootstrap.min.js"></script>
-    <!-- //bootstrap-->
-    <!-- //Js scripts -->
-    <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/608d6ea662662a09efc3f280/1f4k7gfh0';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-    <!--End of Tawk.to Script-->
-</body>
-
-</html>
+</body></html>
