--- a/p5.html
+++ b/p5.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>NutriCheck AI</h1>
-  <p>p5.js를 활용한 인공지능 영양소 검출입니다. javascript를 이용한 AI 검출을 하려면 <a href="https://ai-sketch.github.io/index.html">이 링크</a>를 클릭해주세요.</p>
+  <p>p5.js를 활용한 인공지능 영양소 검출입니다. javascript를 이용한 AI 검출을 하려면 <a href="index.html">이 링크</a>를 클릭해주세요.</p>
   
   <script src="sketch.js"></script>
 
