--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@ Author URL: http://w3layouts.com
             labelContainer.childNodes[i].innerHTML = classPrediction;
         }
     }
-var front = false;
-document.getElementById('flip-button').onclick = function() { front = !front; };
-var constraints = { video: { facingMode: (front? "user" : "environment") } };
+// var front = false;
+// document.getElementById('flip-button').onclick = function() { front = !front; };
+// var constraints = { video: { facingMode: (front? "user" : "environment") } };
 </script>
 
                     </div>
