--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@ Author URL: http://w3layouts.com
 </head>
 
 <body>
+    <a class="typeform-share button" href="https://form.typeform.com/to/QBmxPfAr?typeform-medium=embed-snippet" data-mode="popover" style="width:54px;height:54px;position:fixed;box-shadow:0px 2px 12px rgba(0, 0, 0, 0.06), 0px 2px 4px rgba(0, 0, 0, 0.08);right:26px;bottom:26px;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;background:#0445AF;overflow:hidden;line-height:0;" target="_blank"> <span class="icon"> <svg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' style="margin-top:6px;"> <path d='M21 0H0V9L10.5743 24V16.5H21C22.6567 16.5 24 15.1567 24 13.5V3C24 1.34325 22.6567 0 21 0ZM7.5 9.75C6.672 9.75 6 9.07875 6 8.25C6 7.42125 6.672 6.75 7.5 6.75C8.328 6.75 9 7.42125 9 8.25C9 9.07875 8.328 9.75 7.5 9.75ZM12.75 9.75C11.922 9.75 11.25 9.07875 11.25 8.25C11.25 7.42125 11.922 6.75 12.75 6.75C13.578 6.75 14.25 7.42125 14.25 8.25C14.25 9.07875 13.578 9.75 12.75 9.75ZM18 9.75C17.172 9.75 16.5 9.07875 16.5 8.25C16.5 7.42125 17.172 6.75 18 6.75C18.828 6.75 19.5 7.42125 19.5 8.25C19.5 9.07875 18.828 9.75 18 9.75Z' fill='white' /> </svg> </span> </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
     <!-- top header -->
     <section class="w3l-top-header">
         <div class="container-fluid">
             <div class="top-content-w3ls d-flex align-items-center justify-content-between">
                 <div class="top-headers">
-                    <img src="assets/images/check-mark.png" style="width:20px; height:20px;"/><p style="color:#b6b6e6;"><strong>Notice: </strong>NutriCheck AI가 오픈했습니다!</p>
+                    <img src="assets/images/check-mark.png" style="width:20px; height:20px;"/><p style="color:#b6b6e6;"><strong>Notice: </strong><a href="https://survey.typeform.com/to/QBmxPfAr">NutriCheck AI 개선 설문조사</a>a에 참여해 주세요!</p>
                 </div>
                 <div class="top-headers top-headers-2">
                 </div>
@@ -121,12 +122,23 @@ Author URL: http://w3layouts.com
                         영양소 검출 실험 결과가 잘 안나오나요?</h3>
                     <p>NutriCheck AI를 시작하세요!</p><br><button type="button" class="button" onclick="init()">시작하기(영양소별 수치로 표현)</button>     <a href="p5.html"><button type="button" class="button">시작하기2(검출 결과 레이블로 확인)</button></a> <!--버튼--><br><br>
                     웹캠(또는 카메라)을 완료된 영양소 검출 샘플에 비춰주세요!<br>
+                    검출 결과는 0.5초마다 업데이트됩니다!
+                    <br>
                     <!-- <button type="button" id="#flip-button" class="button">카메라 전환</button> -->
                     <div id="webcam-container"></div>
                     <div id="label-container"></div>
                     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
                     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
                     <script type="text/javascript">
+                    function wait(msecs)
+{
+var start = new Date().getTime();
+var cur = start;
+while(cur - start < msecs)
+{
+cur = new Date().getTime();
+}
+}
                         // More API functions here:
                         // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
                     
@@ -164,6 +176,7 @@ Author URL: http://w3layouts.com
                     
                         async function loop() {
                             webcam.update(); // update the webcam frame
+                            wait(500);
                             await predict();
                             window.requestAnimationFrame(loop);
                         }
@@ -174,7 +187,7 @@ Author URL: http://w3layouts.com
                             const prediction = await model.predict(webcam.canvas);
                             for (let i = 0; i < maxPredictions; i++) {
                                 const classPrediction =
-                                    prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+                                    prediction[i].className + " 포함 확률: " + prediction[i].probability.toFixed(2) + "%";
                                 labelContainer.childNodes[i].innerHTML = classPrediction;
                             }
                         }
