오탈자 수정

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Author URL: http://w3layouts.com
         <div class="container-fluid">
             <div class="top-content-w3ls d-flex align-items-center justify-content-between">
                 <div class="top-headers">
-                    <img src="assets/images/check-mark.png" style="width:20px; height:20px;"/><p style="color:#b6b6e6;"><strong>Notice: </strong><a href="https://survey.typeform.com/to/QBmxPfAr">NutriCheck AI 개선 설문조사</a>a에 참여해 주세요!</p>
+                    <img src="assets/images/check-mark.png" style="width:20px; height:20px;"/><p style="color:#b6b6e6;"><strong>Notice: </strong><a href="https://survey.typeform.com/to/QBmxPfAr">NutriCheck AI 개선 설문조사</a>에 참여해 주세요!</p>
                 </div>
                 <div class="top-headers top-headers-2">
                 </div>
