--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@ Author URL: http://w3layouts.com
                     웹캠(또는 카메라)을 완료된 영양소 검출 샘플에 비춰주세요!<br>
                     검출 결과는 0.5초마다 업데이트됩니다!
                     <br>
+                    * 면책 조항: AI 검출 결과는 참고용이며, 100% 또는 이와 근접한 확률의 결과가 나왔더라도 검출을 보장하지는 않습니다.<br>
+                    만약 검출 결과가 다르게 나왔다면, 이 링크를 통해 신고해주세요!<br>
                     <!-- <button type="button" id="#flip-button" class="button">카메라 전환</button> -->
                     <div id="webcam-container"></div>
                     <div id="label-container"></div>
@@ -187,7 +189,7 @@ cur = new Date().getTime();
                             const prediction = await model.predict(webcam.canvas);
                             for (let i = 0; i < maxPredictions; i++) {
                                 const classPrediction =
-                                    prediction[i].className + " 포함 확률: " + prediction[i].probability.toFixed(2) + "%";
+                                    prediction[i].className + " 포함 확률: " + prediction[i].probability.toFixed(2)*100 + "%";
                                 labelContainer.childNodes[i].innerHTML = classPrediction;
                             }
                         }
